overflow fix

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -427,6 +427,7 @@ a {
     flex-wrap: nowrap;
     gap: 45px;
     border-radius: 23px;
+    overflow: hidden;
 }
 
 .edge_block {
